--- a/src/app/profesor/profesor.page.html
+++ b/src/app/profesor/profesor.page.html
@@ -6,4 +6,5 @@
 
 <ion-content>
   <h1>HOLA GENTE</h1>
+  <ion-button class="cerrarSesion" color="dark" (click)="salir()">Cerrar Sesion</ion-button>
 </ion-content>
