--- a/src/app/profesor/profesor.page.html
+++ b/src/app/profesor/profesor.page.html
@@ -1,10 +1,19 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>profesor</ion-title>
+    <ion-title></ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <h1>HOLA GENTE</h1>
+
+  <ion-card color="dark">
+    <ion-card-content class="contenido">
+        <hr>Vista Login
+    </ion-card-content>
+  </ion-card>
+
+  <ion-button class="botonDos" color="dark" [routerLink]="['/ingreso-agora']">Historial</ion-button>
+  <ion-button class="botonDos" color="dark" [routerLink]="['/profesor-crear-agora']">Crar Agora</ion-button>
+
   <ion-button class="cerrarSesion" color="dark" (click)="salir()">Cerrar Sesion</ion-button>
 </ion-content>
