--- a/src/app/profesor-crear-agora/profesor-crear-agora.page.html
+++ b/src/app/profesor-crear-agora/profesor-crear-agora.page.html
@@ -7,5 +7,10 @@
 </ion-header>
 
 <ion-content>
-  <h1>HOLA</h1>
+  <ngx-qrcode
+  [elementType]="elementType"
+  [value]="value"
+  cssClass="aclass"
+  errorCorrectionLevel="L">
+  </ngx-qrcode>
 </ion-content>
