--- a/src/app/profesor-crear-agora/profesor-crear-agora.page.html
+++ b/src/app/profesor-crear-agora/profesor-crear-agora.page.html
@@ -7,10 +7,12 @@
 </ion-header>
 
 <ion-content>
-  <ngx-qrcode
-  [elementType]="elementType"
-  [value]="value"
-  cssClass="aclass"
-  errorCorrectionLevel="L">
+  <ion-card class="qr">
+    <ngx-qrcode
+      [elementType]="elementType"
+      [value]="value"
+      cssClass="aclass"
+      errorCorrectionLevel="L">
   </ngx-qrcode>
+  </ion-card>
 </ion-content>
